fix(Program rules): Fixing program rules on program stage sections

--- a/src/pages/event-capture/components/default-event-entry-form/default-event-entry-form.html
+++ b/src/pages/event-capture/components/default-event-entry-form/default-event-entry-form.html
@@ -12,10 +12,13 @@
             <td>
               <div text-left>
                 <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
-                  <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [(data)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
-                    (onChange)="updateData($event)"></event-input-container>
-                  <div *ngIf="dataElement.id && errorOrWarningMessage[dataElement.id]">
-                    <program-rule-action-message [programRuleActionMessage]="errorOrWarningMessage[dataElement.id]" [isEventCompleted]="isEventCompleted"></program-rule-action-message>
+                  <div *ngIf="hiddenFields && !hiddenFields[dataElement.id]">
+                    <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [(data)]="dataObject"
+                      [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" (onChange)="updateData($event)"></event-input-container>
+                    <div *ngIf="dataElement.id && errorOrWarningMessage[dataElement.id]">
+                      <program-rule-action-message [programRuleActionMessage]="errorOrWarningMessage[dataElement.id]"
+                        [isEventCompleted]="isEventCompleted"></program-rule-action-message>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -31,11 +34,12 @@
     <div *ngFor="let programStageDataElement of programStage.programStageDataElements;trackBy: trackByFn">
       <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
         <div *ngIf="hiddenFields && !hiddenFields[programStageDataElement.dataElement.id]">
-          <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [(data)]="dataObject"
-            [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
+          <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser"
+            [(data)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
             (onChange)="updateData($event)"></event-input-container>
           <div *ngIf="errorOrWarningMessage[programStageDataElement.dataElement.id]">
-            <program-rule-action-message [programRuleActionMessage]="errorOrWarningMessage[programStageDataElement.dataElement.id]" [isEventCompleted]="isEventCompleted"></program-rule-action-message>
+            <program-rule-action-message [programRuleActionMessage]="errorOrWarningMessage[programStageDataElement.dataElement.id]"
+              [isEventCompleted]="isEventCompleted"></program-rule-action-message>
           </div>
         </div>
       </div>
