--- a/src/pages/tracker-capture/tracker-capture.scss
+++ b/src/pages/tracker-capture/tracker-capture.scss
@@ -1,1 +1,6 @@
-page-tracker-capture {}
+page-tracker-capture {
+  .tracker-storage-status {
+    padding-bottom: 5px;
+    padding-top: 5px;
+  }
+}
