feat(Settings module): Apply color theming on setting module based on user and system color settings

--- a/src/pages/settings/components/entry-form-settings/entry-form-settings.html
+++ b/src/pages/settings/components/entry-form-settings/entry-form-settings.html
@@ -1,3 +1,27 @@
+<!--
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
+-->
 <ion-row>
   <ion-col>
     <ion-item>
@@ -39,13 +63,13 @@
       <ion-label text-wrap>
         <span [translate]="'Render option less than six as radio'"></span>
       </ion-label>
-      <ion-toggle (ionChange)="applySettings()" color="primary" [(ngModel)]="settingObject.entryForm.shouldDisplayAsRadio"></ion-toggle>
+      <ion-toggle (ionChange)="applySettings()" [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="settingObject.entryForm.shouldDisplayAsRadio"></ion-toggle>
     </ion-item>
     <ion-item no-lines>
       <ion-label text-wrap>
         <span [translate]="'Show alert on assignement issues'"></span>
       </ion-label>
-      <ion-toggle (ionChange)="applySettings()" color="primary" [(ngModel)]="settingObject.entryForm.showAlertOnFormAssignement"></ion-toggle>
+      <ion-toggle (ionChange)="applySettings()" [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="settingObject.entryForm.showAlertOnFormAssignement"></ion-toggle>
     </ion-item>
   </ion-col>
 </ion-row>
