--- a/src/pages/sync/components/download-meta-data/download-meta-data.html
+++ b/src/pages/sync/components/download-meta-data/download-meta-data.html
@@ -1,14 +1,29 @@
-<!-- Generated template for the DownloadMetaDataComponent component -->
-
+<!--
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
+-->
 <ion-grid>
   <div *ngIf="!isLoading">
-    <!-- <ion-row>
-      <ion-col>
-        <div class="item-card">
-          
-        </div>
-      </ion-col>
-    </ion-row> -->
     <div>
       <div class="item-card" (click)="autoSelect('selectAll')" color="font-color" padding-top padding-bottom ion-button
         clear text-center text-capitalize icon-start>
@@ -23,12 +38,12 @@
       <div class="item-card" (click)="checkingForResourceUpdate()" color="font-color" padding-top padding-bottom
         ion-button clear text-center text-capitalize icon-start>
         <img class="side-menu-icon" [src]="icons.done" />&nbsp;&nbsp;
-        <span [translate]="'Done'"></span>
+        <span [translate]="'Update'"></span>
       </div>
     </div>
     <div class="item-card">
       <ion-item *ngFor="let resourceObject of resources;trackBy: trackByFn">
-        <ion-checkbox color="blue" [(ngModel)]="resourceObject.status"></ion-checkbox>
+        <ion-checkbox [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="resourceObject.status"></ion-checkbox>
         <ion-label> {{ resourceObject.displayName }} </ion-label>
       </ion-item>
     </div>
@@ -46,7 +61,7 @@
       <div class="item-card" (click)="checkingForResourceUpdate()" color="font-color" padding-top padding-bottom
         ion-button clear text-center text-capitalize icon-start>
         <img class="side-menu-icon" [src]="icons.done" />&nbsp;&nbsp;
-        <span [translate]="'Done'"></span>
+        <span [translate]="'Update'"></span>
       </div>
     </div>
   </div>
