--- a/src/pages/sync/components/clear-local-metadata/clear-local-metadata.html
+++ b/src/pages/sync/components/clear-local-metadata/clear-local-metadata.html
@@ -1,12 +1,36 @@
-<!-- Generated template for the ClearLocalMetadataComponent component -->
-
+<!--
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
+-->
 <ion-grid>
   <ion-row *ngIf="!showLoadingMessage">
     <ion-col>
-      <button ion-button block style="text-transform: none;" (tap)="autoSelect('selectAll')">{{ translationMapper['Select all'] }}</button>
+      <button ion-button block style="text-transform: none;" (tap)="autoSelect('selectAll')">{{
+        translationMapper['Select all'] }}</button>
     </ion-col>
     <ion-col>
-      <button ion-button block style="text-transform: none;" (tap)="autoSelect('unSelectAll')">{{ translationMapper['Deselect all'] }} </button>
+      <button ion-button block style="text-transform: none;" (tap)="autoSelect('unSelectAll')">{{
+        translationMapper['Deselect all'] }} </button>
     </ion-col>
   </ion-row>
   <ion-row *ngIf="!showLoadingMessage">
@@ -14,7 +38,7 @@
       <ion-list>
         <div *ngFor="let resourceObject of resources;trackBy: trackByFn" style="background-color: white">
           <ion-item>
-            <ion-checkbox color="blue" [(ngModel)]="resourceObject.status"></ion-checkbox>
+            <ion-checkbox [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="resourceObject.status"></ion-checkbox>
             <ion-label> {{ resourceObject.displayName }} </ion-label>
           </ion-item>
         </div>
@@ -27,7 +51,8 @@
   </span>
 
   <ion-row *ngIf="!showLoadingMessage">
-    <button ion-button style="text-transform: none;" (tap)="verifyingDeleteOfResources()" block> {{ translationMapper['Clear metaData'] }}</button>
+    <button ion-button style="text-transform: none;" (tap)="verifyingDeleteOfResources()" block> {{
+      translationMapper['Clear metaData'] }}</button>
   </ion-row>
 
 </ion-grid>
